@@ -9,6 +9,8 @@ cupt (1.3.0) UNRELEASED; urgency=low
       - Resolvers/Native:
         - Don't pre-schedule any relations for newly-installed versions, leave
           all work to main resolver.
+        - Don't try to remove the same unsynchronizeable package multiple
+          times.
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 30 Oct 2009 13:54:43 +0200
 
